--- a/intro.tex
+++ b/intro.tex
@@ -25,19 +25,25 @@ Yet none of these approaches is optimal for the THz applications; from the elect
 %}}}
 \subsection{Outline of the thesis} %{{{
 % TODO  cíle disertace
+\add{
 Many different designs of metamaterials  % and photonic crystals
 were proposed in the last decades, part of them being aimed to the terahertz range. %They have been also summed by several books and reviews % TODO refs x5
-% lacks:
-%		not covering the area of possible structures
-%		too much technology?
-%		too specific, no comparison with similar structures, different frequency-spatial scalings of the same
-%		often missing  cricital discussion of excessive losses, slow response etc.
-%		missing proper electrodynamics
+\\
+
+lacks:
+\\ not covering the area of possible structures
+\\ too much technology?
+\\ too specific, no comparison with similar structures, different frequency-spatial scalings of the same
+\\ often missing  cricital discussion of excessive losses, slow response etc.
+\\ missing proper electrodynamics
+}
 
 \paragraph{Theory} %{{{
 The theoretical chapter starts with a brief review of \textit{electrodynamics of continuous media}. In its customary form without account for spatial dispersion, this topic is treated in every related textbook, so classical linear electrodynamics is introduced in a minimalistic manner. Many related topics such as nonlinearity, optical activity and gyrotropy are not discussed here, as they are not essential for the description of metamaterials in the rest of the thesis.  
 
-The local electrodynamics serves as a basis for transforming into the so-called Landau-Lifshitz (or, $EDB$) formulation of electrodynamics for spatially-dispersive media, which is elaborated more in detail. In the author's opinion, this topic does not receive due attention in most of the literature.
+The local electrodynamics serves as a basis for transforming into the so-called Landau-Lifshitz (or, $EDB$) formulation of electrodynamics for spatially-dispersive media. 
+%, which is elaborated more in detail.  ---  in fact I should write more there.
+In the author's opinion, this topic does not receive due attention in most of the literature.
 
 The Bloch theorem follows along with its mathematical proof, which enables to adapt the continuum electrodynamics also for waves propagating in periodic structures. 
 The distinction of two widely recognized types of these, namely \textit{metamaterials} and \textit{photonic crystals}, is discussed from different aspects. 
