--- a/theory.tex
+++ b/theory.tex
@@ -374,8 +374,10 @@ We will however show in the following that the prediction of \textit{beam} propa
 %%   
 %%   %}}}
 \paragraph{Group velocity}  %{{{  
-So far only the propagation and refraction of a plane harmonic wave wave was discussed, and it was shown that it is determined by the shape of IFC at the given frequency.
-Temporal modulation of the wave can be expressed by a complex vector function $\E_0(t)$ that replaces the constant vector $\E_0$ in Eq. \ref{eq_pw}. This is equivalent to the wave being formed by superposition of multiple frequency components in  the frequency domain, with their respective amplitudes given by the Fourier transform of $\E_0(t)$. The position of the envelope in time is determined by their \textit{mutual phase difference}, not by the absolute wave phase. 
+So far only the propagation and refraction of a plane harmonic wave was discussed, and it was shown that it is determined by the shape of IFC at the given frequency.
+Temporal modulation of the wave 
+% can be expressed by a complex vector function $\E_0(t)$ that replaces the constant vector $\E_0$ in Eq. \ref{eq_pw}. This 
+is equivalent to the wave being formed by superposition of multiple frequency components in the frequency domain, with their respective amplitudes given by the Fourier transform of the field envelope. The position of the envelope in time is determined by their \textit{mutual phase difference}, not by the absolute wave phase. Thus, when all components propagate with the same velocity, the envelope does not shift against the wave phase. 
 
 A similar argument can be made with regards to the spatial modulation of the wave. Any wave shape other than the infinite plane wave is a superposition of waves with different wavevectors, and the direction of propagation of the spatial envelope is given by mutual phase difference of the constituent waves. % TODO rewrite-unclear
 
